Made many changes for the node editor - SVGCompositor is now mostly done - TriggerFactory can now dynamically create triggers

--- a/src/RGBStudio/frontend/less/editor.less
+++ b/src/RGBStudio/frontend/less/editor.less
@@ -23,6 +23,11 @@
 	}
 }
 
+.trigger-connector {
+	fill: rgb(255, 0, 0);
+	user-select: none;
+}
+
 .node-title {
 	font-family: monospace;
 	font-size: 12pt;
@@ -43,6 +48,7 @@
 .tool-window-text {
 	fill: white;
 	pointer-events: none;
+	user-select: none;
 }
 
 .click-through {
